fixed navigation border issue

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 
 <body>
 
-  
-     
-  <div class="container home">
-    <!--------- NAVIGATION SECTION ------------>
-    <nav class="navigation-section">
+  <!--------- NAVIGATION SECTION ------------>
+  <!--took nav out of .container to extend the border to the full page and not inherit the max-width:800px-->
+  <nav class="navigation-section">
+    <section class="navigation-sub-section">
       <h1>Fun Bus</h1>
       <div class="navigation-links">
         <a href="#">Home</a>
@@ -28,9 +27,11 @@
         <a href="#">Blog</a>
         <a href="#">Contact</a>
       </div>
-    </nav>
-
-
+    </section>
+  
+  </nav>
+     
+  <div class="container home">
     <!--------- HEADER SECTION ---------------->
     <section class="header-section">
       <div class="img-header">
