STRETCH: added a drop-down menu

--- a/index.html
+++ b/index.html
@@ -113,8 +113,17 @@
           <input class="pick-package" type="radio" name="package" value="Package1">Package 1<br>
           <input class="pick-package" type="radio" name="package" value="Package2">Package 2<br>
           <input class="pick-package" type="radio" name="package" value="Package3">Package 3<br>
-          <input class="pick-package last-package" type="radio" name="package" value="Package4">Package 4<br>
+          <input class="pick-package last-item" type="radio" name="package" value="Package4">Package 4<br>
           
+          Which season are you looking to travel? <br>
+          <select class="last-item" name="season">
+              <option value="SelectSeason">Select the season</option>
+              <option value="Winter">Winter</option>
+              <option value="Spring">Spring</option>
+              <option value="Summer">Summer</option>
+              <option value="Fall">Fall</option>
+            </select> <br>
+
           Special Instructions:<br>
           <input class="long-line" type="text" name="message"><br>
           <input type="submit" value="Submit">
