--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <input class="pick-package last-item" type="radio" name="package" value="Package4">Package 4<br>
           
           Which season are you looking to travel? <br>
-          <select class="last-item" name="season">
+          <select class="seasons last-item" name="season">
               <option value="SelectSeason">Select the season</option>
               <option value="Winter">Winter</option>
               <option value="Spring">Spring</option>
